Implementing Java Script

--- a/contato.html
+++ b/contato.html
@@ -79,5 +79,7 @@
             Todos os direitos reservados: Gabriela Viana &copy
         </p>    
     </footer>
+
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
